[package]
name = "achtung_baby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.61.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ClrProfiling",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WinRT_Metadata",
    "Win32_UI_WindowsAndMessaging",
]